[package]
name = "teo-schema-serializer"
version = "0.0.59-alpha.0"
edition = "2021"
description = "Schema serializer for Teo"
license = "Apache-2.0"
homepage = "https://teocloud.io"
documentation = "https://teocloud.io/docs"
repository = "https://github.com/teocloud/teo-schema-serializer"
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teo-runtime = "0.0.58"