[package]
name = "teo-schema-serializer"
version = "0.0.59-alpha.0"
edition = "2021"
description = "Schema serializer for Teo"
license = "Apache-2.0"
homepage = "https://teocloud.io"
documentation = "https://teocloud.io/docs"
repository = "https://github.com/teocloud/teo-schema-serializer"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teo-parser = { path = "../teo-parser" }
teo-runtime = { path = "../teo-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[build-dependencies]
cbindgen = "0.26"